# opengl-test

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.25D5E04661829420.idx  glad.h.6FE753ABF55673B8.idx  khrplatform.h.E8358D126CB6D605.idx  main.cpp.20AF32472EDBAF0C.idx
include/SGL/: Color.hpp  Component.hpp  Drawable.hpp  Palette.hpp  PointArray.hpp  SGL.hpp  SGLdecl.hpp  Shader.hpp  ShaderBuildSystem.hpp  ShaderData.hpp  ShaderProgram.hpp  Transform.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp  shader.hpp
src/: main.cpp
src/SGL/: Color.cpp  Drawable.cpp  SGL.cpp  Shader.cpp  ShaderBuildSystem.cpp  ShaderData.cpp  ShaderProgram.cpp  Transform.cpp  Window.cpp  shader.cpp
